[package]
name = "bins"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
crossterm = "0.26.0"
futures = "0.3.26"
itertools = "0.10.5"
rayon = "1.6.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
structopt = "0.3.26"
termion = "2.0.1"
tokio = {version = "1.25.0", features = ["process"]}
tokio-util = {version = "0.7.4", features = ["codec"]}
trim-margin = "0.1.0"
tui = "0.19.0"

[dev-dependencies]
rstest = "0.16.0"

[[bin]]
name = "git_hub_launcher"
path = "src/bin/tui/git/git_hub_launcher/main.rs"

[[bin]]
name = "filter"
path = "src/bin/tui/misc/filter/main.rs"

[[bin]]
name = "build_tool_launcher"
path = "src/bin/tui/project/build_tool_launcher/main.rs"

[[bin]]
name = "development_starter"
path = "src/bin/tui/project/development_starter/main.rs"
